fixed side scroll on mobile

--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -81,7 +81,7 @@
 
 #right-corner {
   position: absolute;
-  right: -40px;
+  right: 0;
   top: -20px;
 }
 
